<resources>
    <string name="app_name">NOTodos list</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="priority">Priorität</string>
    <string name="description">Beschreibung</string>
    <string name="title">Titel</string>
    <string name="deadline">Erinnerung am</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_todo">Neuer Todo</string>
    <string-array name="priority_array">
        <item>Wichtig</item>
        <item>Normal</item>
        <item>Keine</item>

    </string-array>
    <string name="notification">Ping Notification</string>
    <string name="label">Ping Me</string>

    <!--  Buttons -->
    <string name="ping">Ping!</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>


    <string name="ping_text">Set Seconds Until Ping</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="seconds_default">10</string>
    <string name="reminder_label">Reminder Text</string>
    <string name="reminder_text">Don\'t forget!</string>

    <!--  Logging -->

    <string name="snoozing">Snoozing!</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>
</resources>
