<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/dialog_title"
        android:hint="@string/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/dialog_description"
        android:hint="@string/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/spinner2"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.13">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/deadline"
            android:id="@+id/textView5"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.10" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Datum"
            android:id="@+id/datum"
            android:onClick="showDatePickerDialog" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zeit"
            android:id="@+id/zeit"
            android:onClick="showTimePickerDialog" />




    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.37">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zurück"
            android:onClick="back"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speichern"
            android:onClick="saveState"
            android:id="@+id/button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Erledigt"
            android:onClick="done"
            android:id="@+id/button3" />
    </LinearLayout>

</LinearLayout>

